<resources>
    <string name="app_name">DishDash</string>
    <string name="title_home">For You</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Meal Plan</string>
    <string name="foryou">FOR YOU</string>
    <string name="search">SEARCH</string>
    <string name="mealplan">MEAL PLAN</string>
    <string name="dishdash">DishDash</string>
    <string name="dailyinspiration">Daily Inspiration</string>
    <string name="thisweek">This Week</string>
    <string name="nextweek">Next Week</string>

    <string name="recipe">RECIPE</string>
    <string name="country">Country</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="add_fav">Add To Favorite</string>
    <string name="addtoplan">ADD TO PLAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="myfavourite">My Favourite</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="countries">Countries</string>
    <string name="categories">Categories</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="viewall">view all</string>
    <string name="search_hint">Enter your Meal name</string>
    <string name="noresult">No Search Result</string>
    <string name="daytorecipe">What day should we add this recipe to?</string>
    <string name="continuebtn">Continue</string>
    <string name="recipedetail">RECIPE</string>
    <string name="recipedetails">RECIPE</string>
    <string name="recommended">Recommended</string>
    <string name="vegan">Vegan</string>
    <string name="egyptian">Egyptian</string>

</resources>