<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_fav">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dishdash.foryou.view.ForYouFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.dishdash.search.view.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_mealplan"
        android:name="com.example.dishdash.mealplan.view.MealPlanFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_mealplan" />
    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.dishdash.favrecipes.view.FavRecipesFragment"
        android:label="Favourite"
        tools:layout="@layout/fragment_fav_recipes" />
</navigation>